--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -33,7 +33,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="{% static 'styles789.css'%}">
+  <link rel="stylesheet" href="{% static 'styles78912.css'%}">
   <link rel="stylesheet" href="{% static 'related22.css'%}">
   <link rel="stylesheet" href="{% static 'postpag888.css'%}">
 
@@ -156,7 +156,7 @@
       </nav>
       
       {% if user.is_authenticated  %}
-      <a href="{% url 'profile'%}" class="btn btn-primary">Profile</a>
+      <a href="{% url 'profile'%}" class="btncustom btn-primary"><img class="imgprofile" src="{%static 'dp2.png'%}" width="35" height="35" border-radius="20px"></a>
       {% else %}
       <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
       {% endif %}
