--- a/App/templates/recent.html
+++ b/App/templates/recent.html
@@ -41,15 +41,20 @@
                         </figure>
         
                         <div class="card-content">
-                        
                             <div class="card-wrapper">
                                 <div class="card-tag">
+                                    <div class="post-actionspage-recent">
+                                                      
+                                        <button class="post-likes" onclick="toggleLike()" data-id="{{ myblog.id }}">
+                                            ❤️ <span id="like-count">{{myblog.likes.count}}</span>
+                                        </button>
+                            
+                                    </div>
                                     <a href="{% url 'category_detail' name=myblog.category.name %}" class="card-badge">{{myblog.category.name}}</a>
                                     <div class="post-actionspage">
                                                       
                                         
-                            
-                                      </div>
+                                    </div>
                 
                                     {% comment %} <a class="span hover-2">#{{myblog.category.name}}</a> {% endcomment %}
                                 </div>
@@ -166,6 +171,23 @@
             {% endif %}
         
         </div>
+        <script>
+            window.onload = function () {
+              const likedPosts = {{ all_user_likes }}; 
+              const posts = document.querySelectorAll(".post-likes");
+              
+              posts.forEach(post => {
+                  const postId = parseInt(post.getAttribute("data-id"));
+                  if (likedPosts.includes(postId)) {
+                    post.classList.add('active');
+                    post.setAttribute('likedBoolean', 'true');
+                  }
+                  else {
+                    post.setAttribute('likedBoolean', 'false')
+                  }
+              });
+            };
+        </script>
 
     </section>
 {% endblock  %}
