--- a/App/static/postpag222.css
+++ b/App/static/postpag222.css
@@ -80,6 +80,17 @@
     /* border-bottom: 1px solid rgba(200, 200, 200, 0.5); */
 }
 
+.post-actionspage-recent {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    padding-right: 5px;
+    height: fit-content;
+    /* border-bottom: 1px solid rgba(200, 200, 200, 0.5); */
+}
+
 .post-likespage{
     /* background-color: rgba(255, 255, 255, 0.8); */
     border: 1px solid rgb(93, 173, 238);
@@ -123,13 +134,14 @@
     display: flex;
     align-items: center;
     gap: 6px;
+    height: 25px;
     cursor: pointer;
     color: #2c3e50;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .post-likes.active, .post-bookmark.active {
-    background-color: #64b0e2;
+    background-color: #4da9e6;
     color: #ffffff;
 }
 
