--- a/App/static/styles78912.css
+++ b/App/static/styles78912.css
@@ -286,14 +286,24 @@ body.nav-active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
+.imgprofile{
+  border-radius: 10px;
+}
+.imgprofile2{
+  border-radius: 10px;
+  opacity: 0.8;
+}
+
 .btncustom img:hover {
   opacity: 0.8;
   transform: rotate(360deg);
   transition: transform 0.5s ease;
 }
 
-.imgprofile{
-  border-radius: 10px;
+.btncustom .imgprofile2:hover {
+  opacity: 0.8;
+  transform: scale(1.1);
+  transition: transform 0.3s ease-in-out;
 }
 
 .cntr{
