--- a/App/templates/categories.html
+++ b/App/templates/categories.html
@@ -79,7 +79,7 @@
                                 <div class="card-tag">
                                     <div class="post-actionspage">
                                         
-                                        <button class="post-likespage" onclick="toggleLike()" title="Like this post">
+                                        <button class="post-likes" onclick="toggleLike()" data-id="{{ myblog.id }}">
                                             ❤️ <span id="like-count">{{myblog.likes.count}}</span>
                                         </button>
                                         
@@ -151,6 +151,23 @@
             {% endfor %}
 
         </div>
+        <script>
+            window.onload = function () {
+              const likedPosts = {{ all_user_likes }}; 
+              const posts = document.querySelectorAll(".post-likes");
+              
+              posts.forEach(post => {
+                  const postId = parseInt(post.getAttribute("data-id"));
+                  if (likedPosts.includes(postId)) {
+                    post.classList.add('active');
+                    post.setAttribute('likedBoolean', 'true');
+                  }
+                  else {
+                    post.setAttribute('likedBoolean', 'false')
+                  }
+              });
+            };
+        </script>
 
     </section>
 {% endblock  %}
