--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -35,7 +35,7 @@
   -->
   <link rel="stylesheet" href="{% static 'styles78912.css'%}">
   <link rel="stylesheet" href="{% static 'related22.css'%}">
-  <link rel="stylesheet" href="{% static 'postpag888.css'%}">
+  <link rel="stylesheet" href="{% static 'postpag222.css'%}">
 
   <!-- 
     - preload images
@@ -158,7 +158,7 @@
       {% if user.is_authenticated  %}
       <a href="{% url 'profile'%}" class="btncustom btn-primary"><img class="imgprofile" src="{%static 'dp2.png'%}" width="35" height="35" border-radius="20px"></a>
       {% else %}
-      <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+      <a href="{% url 'login' %}" class="btncustom btn-primary"><img class="imgprofile2" src="{%static 'login4.png'%}" width="35" height="35" border-radius="20px"></a>
       {% endif %}
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -321,7 +321,6 @@
           <p class="section-text">
             Enjoy highly rated articles on Tech Scape
           </p>
-          <button onclick="fetchTestData()">Text</button>
           
           <ul class="feature-list">
             {% for myblog in blog %}
