updated todays pick on homepage

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -551,7 +551,7 @@
               </h3>
 
               <ul class="comment-list">
-                {% for blog in likes_cat  %}
+                {% for blog in popular_cat  %}
                 <li>
                   <div class="comment-card">
                     <h4 class="headline headline-4 card-title">
@@ -824,7 +824,7 @@
           </ul>
 
           <div class="rights">
-            All Rights Reserved 2024
+            All Rights Reserved 2025
           </div>
 
         </div>
