--- a/App/static/styles777.css
+++ b/App/static/styles777.css
@@ -564,7 +564,24 @@ body.nav-active { overflow: hidden; }
 
 .hero .hero-text { margin-block-end: 40px; font-size: 14px; }
 
-.hero-text1 { margin-block-end: 40px; font-size: 14px; color: #b0b9c9; }
+.hero-text1 { 
+  margin-block-end: 40px; 
+  font-size: 14px; 
+  color: #b0b9c9; 
+  animation: colorChange 5s infinite;
+}
+
+@keyframes colorChange {
+  0% {
+    color: #b0b9c9;
+  }
+  50% {
+    color: #669dba;
+  }
+  100% {
+    color: #b0b9c9;
+  }
+}
 
 .hero .input-wrapper:hover { box-shadow: var(--shadow-2); }
 
