update views with subscribe feature

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -849,7 +849,7 @@
   -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="{% static 'script22.js'%}"></script>
-  <script src="{% static 'scriptUser.js'%}"></script>
+  <script src="{% static 'scriptUser1.js'%}"></script>
   <script>
     window.userData = {
       username: "{{ user.id }}",
