--- a/App/templates/category_detail.html
+++ b/App/templates/category_detail.html
@@ -46,10 +46,13 @@
                                 <div class="card-tag">
                                     <div class="post-actionspage">
                                                       
-                                      <button class="post-likes" onclick="toggleLike('{{ myblog.id }}')" data-id="{{ myblog.id }}" data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
-                                          ❤️ <span id="like-count">{{myblog.likes.count}}</span>
-                                      </button>
-                          
+                                        <button class="post-likes" onclick="toggleLike('{{ myblog.id }}')" data-id="{{ myblog.id }}" data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
+                                            ❤️ <span id="like-count">{{myblog.likes.count}}</span>
+                                        </button>
+                                        <button class="post-shares-home" onclick="toggleShareAll('{{ myblog.id }}')" data-id="{{ myblog.id }}" data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
+                                            🚀 <span id="share-count" class="share-count" data-id="{{ myblog.id }}">{{ myblog.shares_count }}</span>
+                                          </button>
+                                        
                                     </div>
                                   </div>
                             </div>
